--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -45,11 +45,18 @@ endif()
 
 if (INSTALL_LIBS)
 install(TARGETS Audio
+			EXPORT AudioTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Audio
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Audio
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT AudioTargets
+	FILE AudioTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
