--- a/Projects/Skylicht/Client/CMakeLists.txt
+++ b/Projects/Skylicht/Client/CMakeLists.txt
@@ -45,11 +45,18 @@ endif()
 
 if (INSTALL_LIBS)
 install(TARGETS Client
+			EXPORT ClientTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 			
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Client/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Client
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Client
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT ClientTargets
+	FILE ClientTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
