--- a/Projects/Skylicht/Components/CMakeLists.txt
+++ b/Projects/Skylicht/Components/CMakeLists.txt
@@ -33,11 +33,18 @@ endif()
 
 if (INSTALL_LIBS)
 install(TARGETS Components
+			EXPORT ComponentsTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Components/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Components
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Components
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT ComponentsTargets
+	FILE ComponentsTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
