--- a/Projects/Skylicht/Crypto/CMakeLists.txt
+++ b/Projects/Skylicht/Crypto/CMakeLists.txt
@@ -15,11 +15,18 @@ set_target_properties(CryptoLib PROPERTIES VERSION ${SKYLICHT_VERSION})
 
 if (INSTALL_LIBS)
 install(TARGETS CryptoLib
+			EXPORT CryptoLibTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 			
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Crypto/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Crypto
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Crypto
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT CryptoLibTargets
+	FILE CryptoLibTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
