--- a/Projects/Skylicht/Engine/CMakeLists.txt
+++ b/Projects/Skylicht/Engine/CMakeLists.txt
@@ -30,11 +30,18 @@ target_link_libraries(Engine
 
 if (INSTALL_LIBS)
 install(TARGETS Engine
+			EXPORT EngineTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Engine/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Engine
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Engine
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT EngineTargets
+	FILE EngineTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
