--- a/Projects/Skylicht/Physics/CMakeLists.txt
+++ b/Projects/Skylicht/Physics/CMakeLists.txt
@@ -41,11 +41,18 @@ endif()
 
 if (INSTALL_LIBS)
 install(TARGETS Physics
+			EXPORT PhysicsTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Physics/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Physics
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/Physics
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT PhysicsTargets
+	FILE PhysicsTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
