--- a/Projects/Skylicht/UserInterface/CMakeLists.txt
+++ b/Projects/Skylicht/UserInterface/CMakeLists.txt
@@ -25,11 +25,18 @@ target_link_libraries(UserInterface Engine)
 
 if (INSTALL_LIBS)
 install(TARGETS UserInterface
+			EXPORT UserInterfaceTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/UserInterface/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/UserInterface
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/UserInterface
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT UserInterfaceTargets
+	FILE UserInterfaceTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
