--- a/Projects/Skylicht/System/CMakeLists.txt
+++ b/Projects/Skylicht/System/CMakeLists.txt
@@ -22,11 +22,18 @@ endif()
 
 if (INSTALL_LIBS)
 install(TARGETS System
+			EXPORT SystemTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
 
 install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/System
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Skylicht/System
 	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT SystemTargets
+	FILE SystemTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
