--- a/Projects/Bullet3/src/Bullet3Collision/CMakeLists.txt
+++ b/Projects/Bullet3/src/Bullet3Collision/CMakeLists.txt
@@ -57,7 +57,7 @@ SET(Bullet3Collision_HDRS
 	${Bullet3CollisionNarrowPhase_HDRS}
 )
 
-ADD_LIBRARY(Bullet3Collision ${Bullet3Collision_SRCS} ${Bullet3Collision_HDRS})
+ADD_LIBRARY(Bullet3Collision STATIC ${Bullet3Collision_SRCS} ${Bullet3Collision_HDRS})
 
 target_link_libraries(Bullet3Collision Bullet3Geometry)
 
