--- a/Projects/Bullet3/src/Bullet3Dynamics/CMakeLists.txt
+++ b/Projects/Bullet3/src/Bullet3Dynamics/CMakeLists.txt
@@ -29,7 +29,7 @@ SET(Bullet3Dynamics_HDRS
 	shared/b3IntegrateTransforms.h
 )
 
-ADD_LIBRARY(Bullet3Dynamics ${Bullet3Dynamics_SRCS} ${Bullet3Dynamics_HDRS})
+ADD_LIBRARY(Bullet3Dynamics STATIC ${Bullet3Dynamics_SRCS} ${Bullet3Dynamics_HDRS})
 
 target_link_libraries(Bullet3Dynamics Bullet3Collision)
 
