--- a/Projects/Bullet3/src/Bullet3OpenCL/CMakeLists.txt
+++ b/Projects/Bullet3/src/Bullet3OpenCL/CMakeLists.txt
@@ -40,7 +40,7 @@ SET(Bullet3OpenCL_clew_HDRS
 )
 
 
-ADD_LIBRARY(Bullet3OpenCL_clew ${Bullet3OpenCL_clew_SRCS} ${Bullet3OpenCL_clew_HDRS})
+ADD_LIBRARY(Bullet3OpenCL_clew STATIC ${Bullet3OpenCL_clew_SRCS} ${Bullet3OpenCL_clew_HDRS})
 SET_TARGET_PROPERTIES(Bullet3OpenCL_clew PROPERTIES VERSION ${BULLET_VERSION})
 SET_TARGET_PROPERTIES(Bullet3OpenCL_clew PROPERTIES SOVERSION ${BULLET_VERSION})
 
