--- a/Projects/Bullet3/src/BulletInverseDynamics/CMakeLists.txt
+++ b/Projects/Bullet3/src/BulletInverseDynamics/CMakeLists.txt
@@ -29,7 +29,7 @@ SET(BulletInverseDynamics_HDRS
 )
 
 
-ADD_LIBRARY(BulletInverseDynamics ${BulletInverseDynamics_SRCS} ${BulletInverseDynamics_HDRS})
+ADD_LIBRARY(BulletInverseDynamics STATIC ${BulletInverseDynamics_SRCS} ${BulletInverseDynamics_HDRS})
 SET_TARGET_PROPERTIES(BulletInverseDynamics PROPERTIES VERSION ${BULLET_VERSION})
 SET_TARGET_PROPERTIES(BulletInverseDynamics PROPERTIES SOVERSION ${BULLET_VERSION})
 
