--- a/Projects/Skylicht/Engine/CMakeLists.txt
+++ b/Projects/Skylicht/Engine/CMakeLists.txt
@@ -18,6 +18,10 @@ setup_project_group("${skylicht_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(Engine ${ENGINE_SHARED_OR_STATIC_LIB} ${skylicht_source})
 
+if (BUILD_SHARED_LIBS)
+set_target_properties(Engine PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS true)
+endif()
+
 target_precompiled_header(Engine ./Source/pch.cpp ${skylicht_source})
 
 set_target_properties(Engine PROPERTIES VERSION ${SKYLICHT_VERSION})
