--- a/Projects/Skylicht/Lightmapper/CMakeLists.txt
+++ b/Projects/Skylicht/Lightmapper/CMakeLists.txt
@@ -15,6 +15,10 @@ setup_project_group("${skylicht_lightmapper_source}" ${CMAKE_CURRENT_SOURCE_DIR}
 	
 add_library(Lightmapper ${ENGINE_SHARED_OR_STATIC_LIB} ${skylicht_lightmapper_source})
 
+if (BUILD_SHARED_LIBS)
+set_target_properties(Lightmapper PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS true)
+endif()
+
 target_precompiled_header(Lightmapper ./Source/pch.cpp ${skylicht_lightmapper_source})
 
 set_target_properties(Lightmapper PROPERTIES VERSION ${SKYLICHT_VERSION})
