--- a/Projects/Bullet3/src/Bullet3Geometry/CMakeLists.txt
+++ b/Projects/Bullet3/src/Bullet3Geometry/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(Bullet3Geometry_HDRS
 	b3GrahamScan2dConvexHull.h
 )
 
-ADD_LIBRARY(Bullet3Geometry ${Bullet3Geometry_SRCS} ${Bullet3Geometry_HDRS})
+ADD_LIBRARY(Bullet3Geometry STATIC ${Bullet3Geometry_SRCS} ${Bullet3Geometry_HDRS})
 
 target_link_libraries(Bullet3Geometry Bullet3Common)
 
