--- a/Projects/Bullet3/src/BulletDynamics/CMakeLists.txt
+++ b/Projects/Bullet3/src/BulletDynamics/CMakeLists.txt
@@ -140,7 +140,7 @@ SET(BulletDynamics_HDRS
 )
 
 
-ADD_LIBRARY(BulletDynamics ${BulletDynamics_SRCS} ${BulletDynamics_HDRS})
+ADD_LIBRARY(BulletDynamics STATIC ${BulletDynamics_SRCS} ${BulletDynamics_HDRS})
 SET_TARGET_PROPERTIES(BulletDynamics PROPERTIES VERSION ${BULLET_VERSION})
 SET_TARGET_PROPERTIES(BulletDynamics PROPERTIES SOVERSION ${BULLET_VERSION})
 
