--- a/Projects/Bullet3/src/BulletSoftBody/CMakeLists.txt
+++ b/Projects/Bullet3/src/BulletSoftBody/CMakeLists.txt
@@ -77,7 +77,7 @@ SET(BulletSoftBody_HDRS
 
 
 
-ADD_LIBRARY(BulletSoftBody  ${BulletSoftBody_SRCS} ${BulletSoftBody_HDRS})
+ADD_LIBRARY(BulletSoftBody STATIC ${BulletSoftBody_SRCS} ${BulletSoftBody_HDRS})
 SET_TARGET_PROPERTIES(BulletSoftBody PROPERTIES VERSION ${BULLET_VERSION})
 SET_TARGET_PROPERTIES(BulletSoftBody PROPERTIES SOVERSION ${BULLET_VERSION})
 
