--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -13,6 +13,10 @@ setup_project_group("${skylicht_audio_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(Audio ${ENGINE_SHARED_OR_STATIC_LIB} ${skylicht_audio_source})
 
+if (BUILD_SHARED_LIBS)
+set_target_properties(Audio PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS true)
+endif()
+
 target_precompiled_header(Audio ./Source/stdafx.cpp ${skylicht_audio_source})
 
 set_target_properties(Audio PROPERTIES VERSION ${SKYLICHT_VERSION})
