--- a/Projects/Skylicht/Engine/CMakeLists.txt
+++ b/Projects/Skylicht/Engine/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(Engine ${ENGINE_SHARED_OR_STATIC_LIB} ${skylicht_source})
 
 if (BUILD_SHARED_LIBS)
 set_target_properties(Engine PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS true)
+add_definitions(-DSKYLICHT_EXPORTS)
 endif()
 
 target_precompiled_header(Engine ./Source/pch.cpp ${skylicht_source})
