Update build Shared Library on GCC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,7 +166,7 @@ endif()
 # freetype font library
 add_definitions(-DFT2_BUILD_LIBRARY)
 
-# irrlicht shared/static
+# engine static library
 if (NOT BUILD_SHARED_LIBS)
 	add_definitions(-D_IRR_STATIC_LIB_)
 	add_definitions(-D_SKYLICHT_STATIC_LIB_)
