Update build shared library on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,8 +240,9 @@ if (USE_OPENMP)
 		add_compile_options(/openmp)
 		add_definitions(-DUSE_OPENMP)
 	else()
-		# using GCC & Clang++ (android)		
-		add_compile_options(-fopenmp)
+		# using GCC & Clang++ (android)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 		add_definitions(-DUSE_OPENMP)
 	endif()
 endif()
