--- a/Projects/Imgui/CMakeLists.txt
+++ b/Projects/Imgui/CMakeLists.txt
@@ -20,7 +20,18 @@ target_link_libraries(Imgui Engine Irrlicht)
 
 if (INSTALL_LIBS)
 install(TARGETS Imgui
+			EXPORT ImguiTargets
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+			
+install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Imgui/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Imgui
+	FILES_MATCHING PATTERN "*.h*")
+
+install(EXPORT ImguiTargets
+	FILE ImguiTargets.cmake
+	NAMESPACE Skylicht::
+	DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}/cmake
+)
 endif()
