--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -122,6 +122,10 @@ install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Irrlicht/Include
 	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Irrlicht
 	FILES_MATCHING PATTERN "*.h*")
 
+install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Irrlicht/Source/Angle
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Irrlicht
+	FILES_MATCHING PATTERN "*.h*")
+
 install(EXPORT IrrlichtTargets
 	FILE IrrlichtTargets.cmake
 	NAMESPACE Skylicht::
