Fix cygwin shared library, link GDI32.lib for PixelFormat

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -75,10 +75,10 @@ target_link_libraries(Irrlicht ThirdParty)
 # Window DirectX11 && OpenGL
 if (MSVC OR CYGWIN OR MINGW)
 	# OpenGL
-	target_link_libraries(Irrlicht opengl32 Winmm)
+	target_link_libraries(Irrlicht opengl32 Winmm Gdi32)
 
 	# DirectX11 (No DX11 on MINGW)
-	if (NOT MINGW)	
+	if (NOT MINGW)
 	target_link_libraries(Irrlicht d3d11 d3dcompiler dxguid dxgi)
 	endif()
 endif()
